<?xml version="1.0"?>
<package>
  <name>abb_irb120_gazebo</name>
  <version>0.0.0</version>
  <description>
    <p>
      Gazebo wrapper for the ABB IRB 120 manipulator (base model only).
    </p>
    <p>
      This package contains the configuration data, 3D models and launch files required to simulate the ABB
      IRB 120 manipulator in Gazebo. Currently, this only includes the base model. 
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the 
      <a href="http://new.abb.com/products/robotics/industrial-robots/irb-120/irb-120-data">ABB 
      IRB 120 technical data sheet</a> (Version: ROB0149EN_D, May 2012). All URDFs / XACROs are 
      based on the default motion and joint velocity limits, unless noted otherwise (ie: no 
      support for high speed joints, extended / limited motion ranges or other options). Inertia terms used were
      approximated using 3D modelling software, based on the <a href="http://new.abb.com/products/
      robotics/industrial-robots/irb-120/irb-120-cad">ABB IRB 120 model</a>. 
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>      
  </description>
  <author email="culletom@tcd.ie">Mark Culleton (Trinity College Dublin)</author>
  <maintainer email="culletom@tcd.ie">Mark Culleton (Trinity College Dublin)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/abb</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>pr2_mechanism_diagnostics</run_depend>

  <export>
  </export>
</package>