<?xml version="1.0"?>
<package>
  <name>abb_irb120_gazebo_moveit</name>
  <version>0.0.0</version>
  <description>
    <p>
      Package to allow for moveit-gazebo integration with an ABB IRB 120 manipulator (base model only).
    </p>
    <p>
      This package contains modified configuration data and launch files in order to facilitate communication
      between the moveit and gazebo programs. Currently only supports the ABB IRB120 base model. 
    </p>
    <p>
      In order to facilitate communication, some moveit launch files have been modified and included within this
      package. 
    </p>
    <p>
      Before using any of the configuration files included in this package, be sure to check 
      they are correct for the particular robot model and configuration you intend to use them with.
    </p>      
  </description>
  <author email="culletom@tcd.ie">Mark Culleton (Trinity College Dublin)</author>
  <maintainer email="culletom@tcd.ie">Mark Culleton (Trinity College Dublin)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/abb</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>pr2_mechanism_diagnostics</run_depend>  
  <run_depend>abb_irb120_gazebo</run_depend>
  <export>
  </export>
</package>