<package>
  <name>abb_irb2400_gazebo</name>
  <version>0.1.0</version>
  <description>irb2400_gazebo</description>
  <maintainer email="culletom@tcd.ie">Mark Culleton</maintainer>

  <license>BSD</license>

  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="culletom@tcd.ie">Mark Culleton</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>irb2400_description</run_depend>
  <run_depend>irb2400_control</run_depend> 
  <run_depend>gazebo_ros</run_depend> 

  <export>
  </export>
</package>
